# crewai-dynamic-agent

./: .env  README.md  app.py  app_test.py  crew_facade.py  crew_sales_report.py  crew_talking.py  custom_tool_vendas.py  fluxo_audio.py  generate.py  message_types.py  paths.py  pyproject.toml  send_message.py  transcript.py  vendas_ficticias_brasil.csv  vendas_ficticias_brasil_old.csv
